# Twinning

./: .gitignore  Cargo.lock1  Cargo.toml  Cargo1.toml1  LICENSE  README.md
databases/abstractdatabase/: Cargo.toml
databases/abstractdatabase/src/: lib.rs
databases/abstractdatabase/src/client/: connector.rs  mod.rs  protocol.rs
databases/abstractdatabase/src/controller/: mod.rs  resulthandler.rs
databases/abstractdatabase/src/model/: configuration.rs  mod.rs  serialization.rs
databases/influxdb/: Cargo.toml
databases/postgresdb/: Cargo.toml  run.sh  start.sh
databases/postgresdb/src/: databasemanager.rs  lib.rs  postgresclient.rs  postgresimpl.rs
databases/postgresdb/src/models/: postgrestypes.rs  transformation.rs
databases/postgresdb/src/models/properties/: position.rs  speed.rs
engine/abstractdtengine/: Cargo.toml
engine/abstractdteventsystem/: Cargo.toml
engine/abstractdtrtvalidator/: Cargo.toml
engine/fischertechnikdtengine/: Cargo.toml  run.sh
engine/fischertechnikdtengine/src/: lib.rs
engine/fischertechnikdtengine/src/eventsystem/: eventqueue.rs  workflowengine.rs
engine/fischertechnikdtengine/src/synchronizer/: synchronizer.rs
engine/fischertechnikdtengine/src/synchronizer/mappings/: positionmapping.rs
gateway/abstractgateway/: Cargo.toml  run.sh
gateway/abstractgateway/src/: abstractgateway.rs  lib.rs  transport.rs
gateway/abstractgateway/src/downstream/: configuration.rs  idownstream.rs  method.rs  mod.rs  property.rs
gateway/abstractgateway/src/upstream/: command.rs  event.rs  iupstream.rs  mod.rs  property.rs
gateway/mqtt/: Cargo.toml  pub_unstructured_test_message.sh  run.sh  rungw.sh
gateway/mqtt/src/: gateway.rs  main.rs  upstreaminterface.rs
gateway/mqtt/src/models/: commands.rs  mod.rs  types.rs
gateway/mqtt/src/models/properties/: mod.rs  position.rs
gateway/opcuagateway/: Cargo.toml
gateway_old/abstractgateway/src/models/: mod.rs
gateway_old/mqtt/: pub_deviation.sh  pub_structured_test_message.sh  rerun.sh  runengine.sh
gateway_old/mqtt/src/: downstreaminterface.rs  lib.rs  upstreaminterface.rs
gateway_old/mqtt/src/models/: events.rs  parser.rs
gateway_old/mqtt/src/models/properties/: speed.rs
modelmanamgent/aas/: Cargo.toml
modelmanamgent/abstractmodelmanagement/: Cargo.toml
services/: README.md
services/nonrtservices/: Cargo.toml
services/nonrtservices/src/: lib.rs  rest_api.rs  traits.rs
services/nonrtservices/src/services/: db_writer.rs  mod.rs
services/pythonconnector/: Cargo.toml
services/rtservices/: Cargo.toml
services/rtservices/src/: context.rs  engine_event.rs  lib.rs  properties.rs  rt_checker.rs  rt_guard.rs  traits.rs
services/rtservices/src/services/: mod.rs  position_sync.rs  service_a.rs
services/servicemanagement/: Cargo.toml
services/servicemanagement/src/: dispatcher.rs  hierarchy.rs  lib.rs  manager.rs  registry.rs  sample_engine.rs
