[package]
name = "mqtt-gateway"
version = "0.1.0"
edition = "2021"

[dependencies]
abstractgateway = { path = "../abstractgateway" }   # or git dependency
anyhow = "1"
async-trait = "0.1"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "signal"] }

# choose one MQTT client:
rumqttc = "0.24"
tracing = "0.1"
serde_json = "1.0.149"
tracing-subscriber = "0.3.22"
