[package]
name = "rtservices"
version = "0.1.0"
edition = "2021"

[dependencies]
thiserror = { workspace = true }
log = { workspace = true }
chrono = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
crossbeam-channel = "0.5"

# Unix-specific for RT features
[target.'cfg(unix)'.dependencies]
libc = "0.2"
nix = { version = "0.29", features = ["sched", "mman"] }
